--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,13 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::267731972373:user/github-ci
           aws-region: ap-south-1
+          mask-aws-account-id: 'false'
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+        with:
+          mask-password: 'false'
       
       - name: Build, tag, and push docker image to Amazon ECR
         env:
