--- a/eks/aws-auth.yml
+++ b/eks/aws-auth.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 data: 
   mapUsers: |
-    - userarn: arn:aws:iam::267731972373:user/github-ci
-      username: github-ci
+    - userarn: arn:aws:iam::545829658419:user/github-cli
+      username: github-cli
       groups:
         - system:masters
