--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,20 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  deploy:
     name: Build Image
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+         version: 'latest' # default is latest stable
+        id: install
+        
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -35,6 +42,13 @@ jobs:
           REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-   
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t latest .
+          docker push -a $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+      - name: Deploy Image to Amazon EKS
+        run: |
+          kubectl apply -f eks/aws-auth.yml
+          kubectl apply -f eks/deployment.yml
+          kubectl apply -f eks/service.yml
+          kubectl apply -f eks/issuer.yml
+          kubectl apply -f eks/ingress.yml
