--- a/eks/aws-auth.yml
+++ b/eks/aws-auth.yml
@@ -1,11 +1,19 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: aws-auth
-  namespace: kube-system
-data: 
-  mapUsers: |
-    - userarn: arn:aws:iam::545829658419:user/github-cli
-      username: github-cli
-      groups:
-        - system:masters
+  apiVersion: v1
+  kind: ConfigMap
+  metadata:
+    name: aws-auth
+    namespace: kube-system
+  data: 
+  
+    mapUsers: |
+      - userarn: arn:aws:iam::545829658419:user/github-cli
+        username: github-cli
+        groups:
+          - system:masters
+    
+    mapRoles: |
+     - groups:
+        - system:bootstrappers
+        - system:nodes
+      rolearn: arn:aws:iam::545829658419:role/AWSEKSNodeRole
+      username: system:node:{{EC2PrivateDNSName}}
