--- a/eks/deployment.yml
+++ b/eks/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: simple-bank-api
-        image: 545829658419.dkr.ecr.ap-south-1.amazonaws.com/simplebank:a4435abbb75a4220b8c9fa20b89767cb85b8460d
+        image: 545829658419.dkr.ecr.ap-south-1.amazonaws.com/simplebank:latest
         ports:
         - containerPort: 8080
