--- a/eks/issuer.yml
+++ b/eks/issuer.yml
@@ -4,6 +4,9 @@ metadata:
   name: letsencrypt
 spec:
   acme:
+    # You must replace this email address with your own.
+    # Let's Encrypt will use this to contact you about expiring
+    # certificates, and issues related to your account.
     email: mustafakheda07@gmail.com
     # If the ACME server supports profiles, you can specify the profile name here.
     # See #acme-certificate-profiles below.
@@ -18,7 +21,7 @@ spec:
       # certificates for any/all domains managed using your previous account,
       # but you will be unable to revoke any certificates generated using that
       # previous account.
-      name: letsencrypt-account-private-key
+      name: letsencrypt-account-key
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
     - http01:
