--- a/eks/deployment.yml
+++ b/eks/deployment.yml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: simple-bank-api
         image: 545829658419.dkr.ecr.ap-south-1.amazonaws.com/simplebank:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
