--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,13 @@ jobs:
           REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t latest.
-          docker push -a $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
+          docker push  $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push  $REGISTRY/$REPOSITORY:latest
+
+      - name: Set up Kubeconfig
+        run: |
+         aws eks update-kubeconfig --region ap-south-1 --name simple_bank   
 
       - name: Deploy Image to Amazon EKS
         run: |
