--- a/eks/aws-auth.yml
+++ b/eks/aws-auth.yml
@@ -5,11 +5,10 @@
     namespace: kube-system
   data: 
     mapRoles: |
-      - rolearn: arn:aws:iam::545829658419:role/AWSEKSNodeRole
-        username: system:node:{{EC2PrivateDNSName}}
-        groups:
-          - system:bootstrappers
-          - system:nodes
+     - rolearn: arn:aws:iam::545829658419:role/EKSAdminRole
+       username: root
+       groups:
+         - system:masters
     mapUsers: |
       - userarn: arn:aws:iam::545829658419:user/github-cli
         username: github-cli
